build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/code-coverage-ignore.phpt.warn
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	'.'
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:25:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:25:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:25:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:27:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'OK'
WARNING:27:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:27:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:27:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'assertions'
WARNING:27:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:30:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Coverage'
WARNING:30:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Report'
WARNING:30:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:33:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Summary'
WARNING:33:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:34:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Classes'
WARNING:34:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:35:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Methods'
WARNING:35:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:36:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Lines'
WARNING:36:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:36:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
